--- a/_config.yml
+++ b/_config.yml
@@ -82,20 +82,20 @@ avatar: "./assets/img/avatar.jpg"
 toc: true
 
 comments:
-  active: # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active: giscus # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   disqus:
-    shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+    shortname: #zhaojun-github-io # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
   # utterances settings › https://utteranc.es/
   utterances:
-    repo: zhaojun-szh-9815/zhaojun-szh-9815.github.io # <gh-username>/<repo>
+    repo: # zhaojun-szh-9815/zhaojun-szh-9815.github.io # <gh-username>/<repo>
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
+    repo: zhaojun-szh-9815/zhaojun-szh-9815.github.io # <gh-username>/<repo>
+    repo_id: "R_kgDOKawzPg"
+    category: "Announcements"
+    category_id: "DIC_kwDOKawzPs4CbrEN"
     mapping: # optional, default to 'pathname'
     input_position: # optional, default to 'bottom'
     lang: # optional, default to the value of `site.lang`
