--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ title: Zihao's Blog # the main title
 tagline: Everything Is A Miracle. # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Some of Zihao Shen's Coding Life
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: "https://zhaojun-szh-9815.github.io"
